fixed layout issue between tags and accepted payments

--- a/styles/modules/modals/_listingDetail.scss
+++ b/styles/modules/modals/_listingDetail.scss
@@ -44,7 +44,8 @@
       }
 
       .tagWrapper {
-
+        overflow: auto; // clear floats
+        
         .tag {
           float: left;
           margin: 0 $padSm $padSm 0;
